    * add setting whether to display the window title

v0.5 July 17, 2011
    * swap windows
    * move windows
    * change focus to identified window
    * move transitions

v0.1 May 14, 2011
    * basic tiling